--- a/vehiculos/templates/home.html
+++ b/vehiculos/templates/home.html
@@ -69,56 +69,56 @@
             <div class="oferta">
                 <div class="imgInformation">
                     <img width="300"
-                        src="https://viajes.nationalgeographic.com.es/medio/2022/07/11/praga_c881ed8b_1280x720.jpg"
+                        src="https://www.voydeviaje.com.ar/resizer/hpX5SsGcDi7yyQFRk8MnhE8a0as=/arc-anglerfish-arc2-prod-grupoclarin/public/LM4U43O63NGQDHHGKYYZVS5VRU.jpg"
                         alt="Prueba" class="ofertaImg" />
                     <div class="textOfferImage">
-                        <p>Desde $1999</p>
+                        <p>Desde $2699</p>
                     </div>
                 </div>
                 <div class="ofertaInformation">
                     <div class="ofertaName">
-                        <h3>Praga</h3>
-                        <p>Republica Checa</p>
+                        <h3>Capadocia</h3>
+                        <p>Turquia</p>
                     </div>
                     <div class="ofertaRating">
                         <i class="fa-solid fa-star"></i>
-                        <p>4.7</p>
+                        <p>4.6</p>
                     </div>
                 </div>
             </div>
             <div class="oferta">
                 <div class="imgInformation">
                     <img width="300"
-                        src="https://viajes.nationalgeographic.com.es/medio/2022/07/11/praga_c881ed8b_1280x720.jpg"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg/1200px-La_Tour_Eiffel_vue_de_la_Tour_Saint-Jacques%2C_Paris_ao%C3%BBt_2014_%282%29.jpg"
                         alt="Prueba" class="ofertaImg" />
                     <div class="textOfferImage">
-                        <p>Desde $1999</p>
+                        <p>Desde $2399</p>
                     </div>
                 </div>
                 <div class="ofertaInformation">
                     <div class="ofertaName">
-                        <h3>Praga</h3>
-                        <p>Republica Checa</p>
+                        <h3>Paris</h3>
+                        <p>Francia</p>
                     </div>
                     <div class="ofertaRating">
                         <i class="fa-solid fa-star"></i>
-                        <p>4.7</p>
+                        <p>4.9</p>
                     </div>
                 </div>
             </div>
             <div class="oferta">
                 <div class="imgInformation">
                     <img width="300"
-                        src="https://viajes.nationalgeographic.com.es/medio/2022/07/11/praga_c881ed8b_1280x720.jpg"
+                        src="https://a.cdn-hotels.com/gdcs/production157/d661/0dcf4a5f-3f9f-410e-b5ce-ec9b9f856c52.jpg"
                         alt="Prueba" class="ofertaImg" />
                     <div class="textOfferImage">
-                        <p>Desde $1999</p>
+                        <p>Desde $3499</p>
                     </div>
                 </div>
                 <div class="ofertaInformation">
                     <div class="ofertaName">
-                        <h3>Praga</h3>
-                        <p>Republica Checa</p>
+                        <h3>Bergen</h3>
+                        <p>Noruega</p>
                     </div>
                     <div class="ofertaRating">
                         <i class="fa-solid fa-star"></i>
